--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "css.remoteStyleSheets": [
+    "css.styleSheets": [
+        "css/bootstrap.css",
         "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-    ]
+      ]
 }
